--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
-<body>
-  Hello world - IFSP - Pirituba
+<body>  
+  <br>Aula 1</>
+  <br>Hello world - IFSP - Pirituba</>
+  PT301780X,
+  Karini Lima Soares
   <script src="script.js"></script>
 </body>
 
