--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
 </head>
 
 <body>  
-  <br>Aula 1</>
-  <br>Hello world - IFSP - Pirituba</>
-  PT301780X,
-  Karini Lima Soares
+  <strong><p>Aula 1 - Programação WEB</strong></p>
+  <br>Prontuário: PT301780X</>
+  <br>Nome: Karini Lima Soares</>
   <script src="script.js"></script>
 </body>
 
